Verify Metadata Content

--- a/Alzheimer’s_Dementia_Speech_CPU.ipynb
+++ b/Alzheimer’s_Dementia_Speech_CPU.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPicLmnO5Z2yrOya3A9/GoF",
+      "authorship_tag": "ABX9TyMlIJu95TZFLfWliXS28w17",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -282,11 +282,11 @@
         "print(f\"Processing {len(audio_metadata)} files for testing.\")"
       ],
       "metadata": {
-        "id": "YMJGDrMhjlzy",
-        "outputId": "1eadd150-3e32-4492-8ee2-8f51a4bcb983",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YMJGDrMhjlzy",
+        "outputId": "1eadd150-3e32-4492-8ee2-8f51a4bcb983"
       },
       "execution_count": 6,
       "outputs": [
@@ -308,6 +308,320 @@
             "Found 271 audio files.\n",
             "Matched 166 audio files with metadata.\n",
             "Processing 10 files for testing.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import glob\n",
+        "import librosa\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import soundfile as sf\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from tqdm import tqdm\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "\n",
+        "# Define paths\n",
+        "extracted_path = '/content/extracted_audio/'\n",
+        "output_dir = '/content/processed_features/'\n",
+        "os.makedirs(output_dir, exist_ok=True)\n",
+        "\n",
+        "# Metadata is already loaded from your output\n",
+        "# Assuming metadata is now correctly loaded from adresso-train-mmse-scores.csv\n",
+        "# audio_metadata contains 10 files for testing\n",
+        "print(\"Audio metadata preview:\")\n",
+        "print(audio_metadata.head())\n",
+        "\n",
+        "# Preprocessing function for a single audio file\n",
+        "def process_audio(audio_file, sr=16000, skip_noise_removal=True):\n",
+        "    try:\n",
+        "        # Load audio\n",
+        "        y, orig_sr = librosa.load(audio_file, sr=sr, mono=True)\n",
+        "\n",
+        "        # Skip noise removal to save time on CPU\n",
+        "        y_processed = y if skip_noise_removal else librosa.decompose.nn_filter(y, aggregate=np.median, metric='cosine')\n",
+        "\n",
+        "        # Trim silence\n",
+        "        y_trimmed, _ = librosa.effects.trim(y_processed, top_db=20)\n",
+        "\n",
+        "        # Feature Extraction\n",
+        "        # Acoustic: MFCCs (reduced to 13 for CPU efficiency)\n",
+        "        mfccs = librosa.feature.mfcc(y=y_trimmed, sr=sr, n_mfcc=13)\n",
+        "        mfccs_mean = np.mean(mfccs, axis=1)\n",
+        "\n",
+        "        # Prosodic: Pitch, Energy\n",
+        "        pitches, magnitudes = librosa.piptrack(y=y_trimmed, sr=sr)\n",
+        "        pitch_mean = np.mean(pitches[pitches > 0]) if np.any(pitches > 0) else 0\n",
+        "        energy = np.mean(librosa.feature.rms(y=y_trimmed))\n",
+        "\n",
+        "        # Linguistic: Placeholder (requires ASR)\n",
+        "        linguistic_features = np.array([0, 0])\n",
+        "\n",
+        "        # Combine features\n",
+        "        features = np.concatenate([mfccs_mean, [pitch_mean, energy], linguistic_features])\n",
+        "\n",
+        "        return y_trimmed, features\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error processing {audio_file}: {e}\")\n",
+        "        return None, None\n",
+        "\n",
+        "# Process all files\n",
+        "processed_features = []\n",
+        "processed_audio_paths = []\n",
+        "labels = []\n",
+        "\n",
+        "for idx, row in tqdm(audio_metadata.iterrows(), total=len(audio_metadata), desc=\"Processing audio files\"):\n",
+        "    y_trimmed, features = process_audio(row['file'])\n",
+        "    if y_trimmed is None or features is None:\n",
+        "        continue\n",
+        "\n",
+        "    # Save processed audio\n",
+        "    output_path = os.path.join(output_dir, os.path.basename(row['file']))\n",
+        "    sf.write(output_path, y_trimmed, 16000)\n",
+        "\n",
+        "    processed_features.append(features)\n",
+        "    processed_audio_paths.append(output_path)\n",
+        "    labels.append(row['label'])\n",
+        "\n",
+        "    print(f\"Processed: {os.path.basename(row['file'])} (Label: {row['label']})\")\n",
+        "\n",
+        "# Convert to numpy arrays\n",
+        "processed_features = np.array(processed_features)\n",
+        "labels = np.array(labels)\n",
+        "print(f\"Extracted features shape: {processed_features.shape}\")\n",
+        "print(f\"Labels shape: {labels.shape}\")\n",
+        "\n",
+        "# Feature Normalization\n",
+        "if processed_features.size > 0:\n",
+        "    scaler = StandardScaler()\n",
+        "    normalized_features = scaler.fit_transform(processed_features)\n",
+        "\n",
+        "    # Data Augmentation (simple noise addition)\n",
+        "    augmented_features = normalized_features + np.random.normal(0, 0.01, normalized_features.shape)\n",
+        "\n",
+        "    # Export Features\n",
+        "    np.save(os.path.join(output_dir, 'normalized_features.npy'), normalized_features)\n",
+        "    np.save(os.path.join(output_dir, 'augmented_features.npy'), augmented_features)\n",
+        "    np.save(os.path.join(output_dir, 'labels.npy'), labels)\n",
+        "\n",
+        "    # Save processed audio file list and metadata\n",
+        "    audio_metadata.to_csv(os.path.join(output_dir, 'processed_metadata.csv'), index=False)\n",
+        "    with open(os.path.join(output_dir, 'processed_audio_files.txt'), 'w') as f:\n",
+        "        for path in processed_audio_paths:\n",
+        "            f.write(f\"{path}\\n\")\n",
+        "\n",
+        "    print(f\"Features and metadata saved to {output_dir}\")\n",
+        "else:\n",
+        "    print(\"No features extracted. Check audio files and metadata matching.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z0xqJFh7jzh_",
+        "outputId": "19243a2e-98a1-4a9e-d608-269ad79cfb1b"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Audio metadata preview:\n",
+            "                                                file label  mmse\n",
+            "0  /content/extracted_audio/ADReSSo21/diagnosis/t...    ad    23\n",
+            "1  /content/extracted_audio/ADReSSo21/diagnosis/t...    ad    17\n",
+            "2  /content/extracted_audio/ADReSSo21/diagnosis/t...    ad    19\n",
+            "3  /content/extracted_audio/ADReSSo21/diagnosis/t...    ad    10\n",
+            "4  /content/extracted_audio/ADReSSo21/diagnosis/t...    ad    20\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Processing audio files:  10%|█         | 1/10 [00:21<03:09, 21.10s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso228.wav (Label: ad)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\rProcessing audio files:  20%|██        | 2/10 [00:21<01:12,  9.09s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso055.wav (Label: ad)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\rProcessing audio files:  30%|███       | 3/10 [00:22<00:38,  5.46s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso200.wav (Label: ad)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\rProcessing audio files:  40%|████      | 4/10 [00:23<00:21,  3.58s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso229.wav (Label: ad)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\rProcessing audio files:  50%|█████     | 5/10 [00:24<00:13,  2.60s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso220.wav (Label: ad)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\rProcessing audio files:  60%|██████    | 6/10 [00:25<00:07,  1.97s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso043.wav (Label: ad)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\rProcessing audio files:  70%|███████   | 7/10 [00:25<00:04,  1.42s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso211.wav (Label: ad)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\rProcessing audio files:  80%|████████  | 8/10 [00:25<00:02,  1.11s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso116.wav (Label: ad)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\rProcessing audio files:  90%|█████████ | 9/10 [00:26<00:00,  1.00it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso049.wav (Label: ad)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Processing audio files: 100%|██████████| 10/10 [00:26<00:00,  2.70s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processed: adrso125.wav (Label: ad)\n",
+            "Extracted features shape: (10, 17)\n",
+            "Labels shape: (10,)\n",
+            "Features and metadata saved to /content/processed_features/\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(audio_metadata[['file', 'label', 'mmse']])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ak9vFwIXkB2Y",
+        "outputId": "51f3d88a-b4ca-41fb-dd6b-504bef059570"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                                                file label  mmse\n",
+            "0  /content/extracted_audio/ADReSSo21/diagnosis/t...    ad    23\n",
+            "1  /content/extracted_audio/ADReSSo21/diagnosis/t...    ad    17\n",
+            "2  /content/extracted_audio/ADReSSo21/diagnosis/t...    ad    19\n",
+            "3  /content/extracted_audio/ADReSSo21/diagnosis/t...    ad    10\n",
+            "4  /content/extracted_audio/ADReSSo21/diagnosis/t...    ad    20\n",
+            "5  /content/extracted_audio/ADReSSo21/diagnosis/t...    ad    22\n",
+            "6  /content/extracted_audio/ADReSSo21/diagnosis/t...    ad    15\n",
+            "7  /content/extracted_audio/ADReSSo21/diagnosis/t...    ad    12\n",
+            "8  /content/extracted_audio/ADReSSo21/diagnosis/t...    ad    18\n",
+            "9  /content/extracted_audio/ADReSSo21/diagnosis/t...    ad    17\n"
           ]
         }
       ]
