--- a/Alzheimer’s_Dementia_Speech_CPU.ipynb
+++ b/Alzheimer’s_Dementia_Speech_CPU.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMlIJu95TZFLfWliXS28w17",
+      "authorship_tag": "ABX9TyOPoC4hzA8g4lCJq8Uq8wx4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -625,6 +625,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cp -r /content/processed_features /content/drive/MyDrive/Voice/processed_features"
+      ],
+      "metadata": {
+        "id": "SBbXxpRakXwI"
+      },
+      "execution_count": 9,
+      "outputs": []
     },
     {
       "cell_type": "code",
