--- a/Alzheimer’s_Dementia_Speech_CPU.ipynb
+++ b/Alzheimer’s_Dementia_Speech_CPU.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOzHkt6dsPGAcV5FwoxDrJ4",
+      "authorship_tag": "ABX9TyMPjtlgPo3ehj4MzWrDAs2E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1025,6 +1025,50 @@
           "name": "stdout",
           "text": [
             "All EDA plots saved to /content/processed_features/eda_plots\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from scipy.stats import ttest_ind\n",
+        "for feature in feature_columns:\n",
+        "    dementia = features_df[features_df['label'] == ' reverie dementia'][feature]\n",
+        "    control = features_df[features_df['label'] == 'control'][feature]\n",
+        "    stat, p = ttest_ind(dementia, control)\n",
+        "    print(f\"{feature}: p-value = {p:.4f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "27ESLIUFmczs",
+        "outputId": "a9495b34-7d04-444e-d0e9-5842358b367f"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MFCC_0: p-value = nan\n",
+            "MFCC_1: p-value = nan\n",
+            "MFCC_2: p-value = nan\n",
+            "MFCC_3: p-value = nan\n",
+            "MFCC_4: p-value = nan\n",
+            "MFCC_5: p-value = nan\n",
+            "MFCC_6: p-value = nan\n",
+            "MFCC_7: p-value = nan\n",
+            "MFCC_8: p-value = nan\n",
+            "MFCC_9: p-value = nan\n",
+            "MFCC_10: p-value = nan\n",
+            "MFCC_11: p-value = nan\n",
+            "MFCC_12: p-value = nan\n",
+            "Pitch: p-value = nan\n",
+            "Energy: p-value = nan\n",
+            "Linguistic_1: p-value = nan\n",
+            "Linguistic_2: p-value = nan\n"
           ]
         }
       ]
