# Combine with normalized features

--- a/Alzheimer’s_Dementia_Speech_CPU.ipynb
+++ b/Alzheimer’s_Dementia_Speech_CPU.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPfAvgfhKSPxqy5TIMDp4xr",
+      "authorship_tag": "ABX9TyOmMKJNC8+yZQJ5o1CSZjaj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5765,6 +5765,40 @@
           "name": "stderr",
           "text": [
             "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Combine Features"
+      ],
+      "metadata": {
+        "id": "5tpO7IQcx2bJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Combine with normalized features\n",
+        "combined_features = np.hstack((normalized_features, wav2vec_embeddings))\n",
+        "print(\"Combined Features Shape:\", combined_features.shape)  # Expected: (166, 16 + 768)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EAtlNtRAx9Cn",
+        "outputId": "084f653b-b323-44db-eaae-fde43b17b5e4"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Combined Features Shape: (166, 785)\n"
           ]
         }
       ]
