Normalize Combined Features

--- a/Alzheimer’s_Dementia_Speech_CPU.ipynb
+++ b/Alzheimer’s_Dementia_Speech_CPU.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOmMKJNC8+yZQJ5o1CSZjaj",
+      "authorship_tag": "ABX9TyMhDitkFoMoS5fdxnhy5vU5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5799,6 +5799,44 @@
           "name": "stdout",
           "text": [
             "Combined Features Shape: (166, 785)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Split Data for Training"
+      ],
+      "metadata": {
+        "id": "Dr4aSUezyGW9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "X = combined_features\n",
+        "y = labels\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
+        "print(\"Train Shape:\", X_train.shape, \"Test Shape:\", X_test.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-lnZc1P5yA0M",
+        "outputId": "bc64dda1-9ac9-4cc3-933d-6646ff555dae"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Train Shape: (132, 785) Test Shape: (34, 785)\n"
           ]
         }
       ]
