--- a/Alzheimer’s_Dementia_Speech_GPU.ipynb
+++ b/Alzheimer’s_Dementia_Speech_GPU.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNV5cZmMMbAPZ/T9Fs/ecK5",
+      "authorship_tag": "ABX9TyPigFBtU+MsNZtrnmpGPvKR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5737,7 +5737,7 @@
           "text": [
             "Some weights of Wav2Vec2Model were not initialized from the model checkpoint at facebook/wav2vec2-base-960h and are newly initialized: ['masked_spec_embed']\n",
             "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-            "Extracting Wav2Vec embeddings:  82%|████████▏ | 14/17 [08:34<01:53, 37.69s/it]"
+            "Extracting Wav2Vec embeddings:  94%|█████████▍| 16/17 [09:46<00:36, 36.84s/it]"
           ]
         }
       ]
@@ -5892,6 +5892,108 @@
       ],
       "metadata": {
         "id": "S8Ov2S3hzC1j"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_curve, auc, confusion_matrix\n",
+        "from tensorflow.keras.models import Model\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "\n",
+        "# Define paths\n",
+        "output_dir = '/content/processed_features/'\n",
+        "eval_dir = os.path.join(output_dir, 'evaluation_plots')\n",
+        "os.makedirs(eval_dir, exist_ok=True)\n",
+        "\n",
+        "# Evaluate model on test set\n",
+        "y_pred_prob = model.predict(X_test_scaled)\n",
+        "y_pred = (y_pred_prob > 0.5).astype(int)\n",
+        "\n",
+        "# Compute metrics\n",
+        "accuracy = accuracy_score(y_test_binary, y_pred)\n",
+        "precision = precision_score(y_test_binary, y_pred)\n",
+        "recall = recall_score(y_test_binary, y_pred)\n",
+        "f1 = f1_score(y_test_binary, y_pred)\n",
+        "\n",
+        "print(\"Model Evaluation Metrics:\")\n",
+        "print(f\"Accuracy: {accuracy:.4f}\")\n",
+        "print(f\"Precision: {precision:.4f}\")\n",
+        "print(f\"Recall: {recall:.4f}\")\n",
+        "print(f\"F1-Score: {f1:.4f}\")\n",
+        "\n",
+        "# Plot training history\n",
+        "plt.figure(figsize=(12, 5))\n",
+        "\n",
+        "plt.subplot(1, 2, 1)\n",
+        "plt.plot(history.history['loss'], label='Train Loss')\n",
+        "plt.plot(history.history['val_loss'], label='Validation Loss')\n",
+        "plt.title('Model Loss')\n",
+        "plt.xlabel('Epoch')\n",
+        "plt.ylabel('Loss')\n",
+        "plt.legend()\n",
+        "plt.grid(True)\n",
+        "\n",
+        "plt.subplot(1, 2, 2)\n",
+        "plt.plot(history.history['accuracy'], label='Train Accuracy')\n",
+        "plt.plot(history.history['val_accuracy'], label='Validation Accuracy')\n",
+        "plt.title('Model Accuracy')\n",
+        "plt.xlabel('Epoch')\n",
+        "plt.ylabel('Accuracy')\n",
+        "plt.legend()\n",
+        "plt.grid(True)\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.savefig(os.path.join(eval_dir, 'training_history.png'))\n",
+        "plt.show()\n",
+        "\n",
+        "# Confusion Matrix\n",
+        "cm = confusion_matrix(y_test_binary, y_pred)\n",
+        "plt.figure(figsize=(8, 6))\n",
+        "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', xticklabels=['CN', 'AD'], yticklabels=['CN', 'AD'])\n",
+        "plt.title('Confusion Matrix')\n",
+        "plt.xlabel('Predicted')\n",
+        "plt.ylabel('True')\n",
+        "plt.savefig(os.path.join(eval_dir, 'confusion_matrix.png'))\n",
+        "plt.show()\n",
+        "\n",
+        "# ROC Curve\n",
+        "fpr, tpr, _ = roc_curve(y_test_binary, y_pred_prob)\n",
+        "roc_auc = auc(fpr, tpr)\n",
+        "plt.figure(figsize=(8, 6))\n",
+        "plt.plot(fpr, tpr, color='darkorange', lw=2, label=f'ROC curve (AUC = {roc_auc:.2f})')\n",
+        "plt.plot([0, 1], [0, 1], color='navy', lw=2, linestyle='--')\n",
+        "plt.xlim([0.0, 1.0])\n",
+        "plt.ylim([0.0, 1.05])\n",
+        "plt.xlabel('False Positive Rate')\n",
+        "plt.ylabel('True Positive Rate')\n",
+        "plt.title('Receiver Operating Characteristic (ROC) Curve')\n",
+        "plt.legend(loc=\"lower right\")\n",
+        "plt.grid(True)\n",
+        "plt.savefig(os.path.join(eval_dir, 'roc_curve.png'))\n",
+        "plt.show()\n",
+        "\n",
+        "# Save model\n",
+        "model.save(os.path.join(output_dir, 'alzheimer_detection_model.h5'))\n",
+        "\n",
+        "# Save evaluation metrics\n",
+        "metrics_df = pd.DataFrame({\n",
+        "    'Metric': ['Accuracy', 'Precision', 'Recall', 'F1-Score', 'ROC-AUC'],\n",
+        "    'Value': [accuracy, precision, recall, f1, roc_auc]\n",
+        "})\n",
+        "metrics_df.to_csv(os.path.join(output_dir, 'evaluation_metrics.csv'), index=False)\n",
+        "print(f\"Model and evaluation metrics saved to {output_dir}\")"
+      ],
+      "metadata": {
+        "id": "hMvDDRH1eamS"
       },
       "execution_count": null,
       "outputs": []
