try to fix model

--- a/Alzheimer’s_Dementia_Speech_GPU.ipynb
+++ b/Alzheimer’s_Dementia_Speech_GPU.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPigFBtU+MsNZtrnmpGPvKR",
+      "authorship_tag": "ABX9TyPOWL8RBSWGGlxfyHkWbs4O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6451,12 +6451,210 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import os\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "from sklearn.model_selection import StratifiedKFold\n",
+        "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_curve, auc, confusion_matrix\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.models import Model\n",
+        "from tensorflow.keras.layers import Input, Dense, Dropout, BatchNormalization\n",
+        "from tensorflow.keras.regularizers import l2\n",
+        "import librosa\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "\n",
+        "# Define paths\n",
+        "output_dir = '/content/processed_features/'\n",
+        "eval_dir = os.path.join(output_dir, 'evaluation_plots')\n",
+        "os.makedirs(eval_dir, exist_ok=True)\n",
+        "\n",
+        "# Load data (from previous steps)\n",
+        "audio_metadata = pd.read_csv(os.path.join(output_dir, 'processed_metadata.csv'))\n",
+        "normalized_features = np.load(os.path.join(output_dir, 'normalized_features.npy'))\n",
+        "wav2vec_embeddings = np.load(os.path.join(output_dir, 'wav2vec_embeddings.npy'), allow_pickle=True)\n",
+        "if wav2vec_embeddings.size == 0:\n",
+        "    # Recompute embeddings if not saved\n",
+        "    from transformers import Wav2Vec2Processor, Wav2Vec2Model\n",
+        "    import torch\n",
+        "    processor = Wav2Vec2Processor.from_pretrained(\"facebook/wav2vec2-base-960h\")\n",
+        "    model = Wav2Vec2Model.from_pretrained(\"facebook/wav2vec2-base-960h\")\n",
+        "    def extract_wav2vec_embeddings(file, max_length=16000 * 10):\n",
+        "        try:\n",
+        "            y, sr = librosa.load(file, sr=16000)\n",
+        "            y = y[:max_length]\n",
+        "            input_values = processor(y, sampling_rate=16000, return_tensors=\"pt\").input_values\n",
+        "            with torch.no_grad():\n",
+        "                outputs = model(input_values)\n",
+        "            embeddings = outputs.last_hidden_state.mean(dim=1).squeeze().numpy()\n",
+        "            return embeddings\n",
+        "        except Exception as e:\n",
+        "            print(f\"Error processing {file}: {e}\")\n",
+        "            return np.zeros(768)\n",
+        "    batch_size = 10\n",
+        "    wav2vec_embeddings = []\n",
+        "    for i in range(0, len(audio_metadata), batch_size):\n",
+        "        batch_files = audio_metadata['file'][i:i + batch_size]\n",
+        "        batch_embeddings = [extract_wav2vec_embeddings(f) for f in batch_files]\n",
+        "        wav2vec_embeddings.extend(batch_embeddings)\n",
+        "    wav2vec_embeddings = np.array(wav2vec_embeddings)\n",
+        "    np.save(os.path.join(output_dir, 'wav2vec_embeddings.npy'), wav2vec_embeddings)\n",
+        "\n",
+        "combined_features = np.hstack((normalized_features, wav2vec_embeddings))\n",
+        "labels = np.load(os.path.join(output_dir, 'labels.npy'))\n",
+        "\n",
+        "# Data Augmentation Function\n",
+        "def augment_audio_features(features, noise_factor=0.01, shift_factor=0.1):\n",
+        "    augmented = features + np.random.normal(0, noise_factor, features.shape)\n",
+        "    shift = np.random.uniform(-shift_factor, shift_factor, features.shape)\n",
+        "    augmented += shift\n",
+        "    return augmented\n",
+        "\n",
+        "# Prepare data\n",
+        "X = combined_features\n",
+        "y = (labels == 'ad').astype(int)  # Binary labels: ad=1, cn=0\n",
+        "\n",
+        "# Initialize cross-validation\n",
+        "skf = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+        "fold_metrics = []\n",
+        "\n",
+        "# Define simpler model\n",
+        "def create_model(input_shape):\n",
+        "    inputs = Input(shape=input_shape)\n",
+        "    x = Dense(256, activation='relu', kernel_regularizer=l2(0.01))(inputs)\n",
+        "    x = BatchNormalization()(x)\n",
+        "    x = Dropout(0.4)(x)\n",
+        "    x = Dense(128, activation='relu', kernel_regularizer=l2(0.01))(x)\n",
+        "    x = BatchNormalization()(x)\n",
+        "    x = Dropout(0.4)(x)\n",
+        "    outputs = Dense(1, activation='sigmoid')(x)\n",
+        "    model = Model(inputs, outputs)\n",
+        "    model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+        "    return model\n",
+        "\n",
+        "# Cross-validation loop\n",
+        "for fold, (train_idx, val_idx) in enumerate(skf.split(X, y)):\n",
+        "    print(f\"\\nTraining Fold {fold + 1}\")\n",
+        "    X_train, X_val = X[train_idx], X[val_idx]\n",
+        "    y_train, y_val = y[train_idx], y[val_idx]\n",
+        "\n",
+        "    # Scale features\n",
+        "    scaler = StandardScaler()\n",
+        "    X_train_scaled = scaler.fit_transform(X_train)\n",
+        "    X_val_scaled = scaler.transform(X_val)\n",
+        "\n",
+        "    # Augment training data\n",
+        "    X_train_augmented = augment_audio_features(X_train_scaled)\n",
+        "\n",
+        "    # Create and train model\n",
+        "    model = create_model(input_shape=(X_train_scaled.shape[1],))\n",
+        "    history = model.fit(X_train_augmented, y_train, validation_data=(X_val_scaled, y_val),\n",
+        "                        epochs=50, batch_size=16, verbose=1)\n",
+        "\n",
+        "    # Evaluate model\n",
+        "    y_pred_prob = model.predict(X_val_scaled)\n",
+        "    y_pred = (y_pred_prob > 0.5).astype(int)\n",
+        "    accuracy = accuracy_score(y_val, y_pred)\n",
+        "    precision = precision_score(y_val, y_pred)\n",
+        "    recall = recall_score(y_val, y_pred)\n",
+        "    f1 = f1_score(y_val, y_pred)\n",
+        "    fpr, tpr, _ = roc_curve(y_val, y_pred_prob)\n",
+        "    roc_auc = auc(fpr, tpr)\n",
+        "\n",
+        "    fold_metrics.append({\n",
+        "        'Fold': fold + 1,\n",
+        "        'Accuracy': accuracy,\n",
+        "        'Precision': precision,\n",
+        "        'Recall': recall,\n",
+        "        'F1-Score': f1,\n",
+        "        'ROC-AUC': roc_auc\n",
+        "    })\n",
+        "\n",
+        "    # Plot training history for this fold\n",
+        "    plt.figure(figsize=(12, 5))\n",
+        "    plt.subplot(1, 2, 1)\n",
+        "    plt.plot(history.history['loss'], label='Train Loss')\n",
+        "    plt.plot(history.history['val_loss'], label='Validation Loss')\n",
+        "    plt.title(f'Fold {fold + 1} Loss')\n",
+        "    plt.xlabel('Epoch')\n",
+        "    plt.ylabel('Loss')\n",
+        "    plt.legend()\n",
+        "    plt.grid(True)\n",
+        "\n",
+        "    plt.subplot(1, 2, 2)\n",
+        "    plt.plot(history.history['accuracy'], label='Train Accuracy')\n",
+        "    plt.plot(history.history['val_accuracy'], label='Validation Accuracy')\n",
+        "    plt.title(f'Fold {fold + 1} Accuracy')\n",
+        "    plt.xlabel('Epoch')\n",
+        "    plt.ylabel('Accuracy')\n",
+        "    plt.legend()\n",
+        "    plt.grid(True)\n",
+        "\n",
+        "    plt.tight_layout()\n",
+        "    plt.savefig(os.path.join(eval_dir, f'fold_{fold + 1}_training_history.png'))\n",
+        "    plt.show()\n",
+        "\n",
+        "    # Confusion Matrix\n",
+        "    cm = confusion_matrix(y_val, y_pred)\n",
+        "    plt.figure(figsize=(8, 6))\n",
+        "    sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', xticklabels=['CN', 'AD'], yticklabels=['CN', 'AD'])\n",
+        "    plt.title(f'Fold {fold + 1} Confusion Matrix')\n",
+        "    plt.xlabel('Predicted')\n",
+        "    plt.ylabel('True')\n",
+        "    plt.savefig(os.path.join(eval_dir, f'fold_{fold + 1}_confusion_matrix.png'))\n",
+        "    plt.show()\n",
+        "\n",
+        "# Summarize cross-validation results\n",
+        "metrics_df = pd.DataFrame(fold_metrics)\n",
+        "print(\"\\nCross-Validation Results:\")\n",
+        "print(metrics_df)\n",
+        "print(\"\\nAverage Metrics:\")\n",
+        "print(metrics_df.mean(numeric_only=True))\n",
+        "\n",
+        "# Save metrics\n",
+        "metrics_df.to_csv(os.path.join(output_dir, 'cross_validation_metrics.csv'), index=False)\n",
+        "\n",
+        "# Train final model on all data\n",
+        "scaler = StandardScaler()\n",
+        "X_scaled = scaler.fit_transform(X)\n",
+        "X_augmented = augment_audio_features(X_scaled)\n",
+        "final_model = create_model(input_shape=(X_scaled.shape[1],))\n",
+        "final_model.fit(X_augmented, y, epochs=50, batch_size=16, verbose=1)\n",
+        "\n",
+        "# Save final model and scaler\n",
+        "final_model.save(os.path.join(output_dir, 'final_alzheimer_detection_model.h5'))\n",
+        "import joblib\n",
+        "joblib.dump(scaler, os.path.join(output_dir, 'final_scaler.pkl'))\n",
+        "\n",
+        "print(f\"Final model and metrics saved to {output_dir}\")"
+      ],
       "metadata": {
-        "id": "d8VRxzXeO6BR"
+        "id": "d8VRxzXeO6BR",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 332
+        },
+        "outputId": "d822961c-33e0-45b8-971a-54aa02311290"
       },
-      "execution_count": 22,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "[Errno 2] No such file or directory: '/content/processed_features/wav2vec_embeddings.npy'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-27-e9a71092777d>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0maudio_metadata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'processed_metadata.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0mnormalized_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'normalized_features.npy'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0mwav2vec_embeddings\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'wav2vec_embeddings.npy'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_pickle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mwav2vec_embeddings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0;31m# Recompute embeddings if not saved\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/numpy/lib/_npyio_impl.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding, max_header_size)\u001b[0m\n\u001b[1;32m    453\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    454\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 455\u001b[0;31m             \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menter_context\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    456\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    457\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/processed_features/wav2vec_embeddings.npy'"
+          ]
+        }
+      ]
     }
   ]
 }
