Step 2: Load and Organize Datasets

--- a/Speech_AD.ipynb
+++ b/Speech_AD.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO5Y3O/ZkhHCTEaUfQIahEu",
+      "authorship_tag": "ABX9TyMSaq3BZRJ6FxUErNB7xyjb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -154,6 +154,24 @@
       "metadata": {
         "id": "DAnGiz4PnzwF"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 2: Load and Organize Datasets"
+      ],
+      "metadata": {
+        "id": "1AeAup5KoFQe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "n0pK0PBMoCZJ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
