--- a/Speech_AD.ipynb
+++ b/Speech_AD.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMSaq3BZRJ6FxUErNB7xyjb",
+      "authorship_tag": "ABX9TyPHwHgOxUNJi3LzvEttXwBj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -166,12 +166,76 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Define paths to datasets in Google Drive\n",
+        "data_path = '/content/drive/MyDrive/Voice/'\n",
+        "diagnosis_train = data_path + 'ADReSSo21-diagnosis-train.tgz'\n",
+        "progression_train = data_path + 'ADReSSo21-progression-train.tgz'\n",
+        "progression_test = data_path + 'ADReSSo21-progression-test.tgz'\n",
+        "\n",
+        "# Unzip datasets\n",
+        "!tar -xvzf \"{diagnosis_train}\" -C \"/content/diagnosis_train\"\n",
+        "!tar -xvzf \"{progression_train}\" -C \"/content/progression_train\"\n",
+        "!tar -xvzf \"{progression_test}\" -C \"/content/progression_test\"\n",
+        "\n",
+        "# Load CSV files\n",
+        "task1 = pd.read_csv(data_path + 'task1.csv')  # AD vs Control labels\n",
+        "task2 = pd.read_csv(data_path + 'task2.csv')  # MMSE scores\n",
+        "task3 = pd.read_csv(data_path + 'task3.csv')  # Cognitive decline labels\n",
+        "\n",
+        "# Display dataset info\n",
+        "print(\"Task 1 (AD Classification):\")\n",
+        "print(task1.head())\n",
+        "print(\"\\nTask 2 (MMSE Regression):\")\n",
+        "print(task2.head())\n",
+        "print(\"\\nTask 3 (Cognitive Decline):\")\n",
+        "print(task3.head())"
+      ],
       "metadata": {
-        "id": "n0pK0PBMoCZJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n0pK0PBMoCZJ",
+        "outputId": "64507eb7-3d54-487e-929b-16370a5961f9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tar: /content/diagnosis_train: Cannot open: No such file or directory\n",
+            "tar: Error is not recoverable: exiting now\n",
+            "tar: /content/progression_train: Cannot open: No such file or directory\n",
+            "tar: Error is not recoverable: exiting now\n",
+            "tar: /content/progression_test: Cannot open: No such file or directory\n",
+            "tar: Error is not recoverable: exiting now\n",
+            "Task 1 (AD Classification):\n",
+            "         ID       Dx\n",
+            "0  adrsdt15  Control\n",
+            "1  adrsdt40  Control\n",
+            "2  adrsdt26  Control\n",
+            "3  adrsdt67  Control\n",
+            "4  adrsdt58  Control\n",
+            "\n",
+            "Task 2 (MMSE Regression):\n",
+            "         ID  MMSE\n",
+            "0  adrsdt15    30\n",
+            "1  adrsdt40    28\n",
+            "2  adrsdt26    29\n",
+            "3  adrsdt67    30\n",
+            "4  adrsdt58    29\n",
+            "\n",
+            "Task 3 (Cognitive Decline):\n",
+            "         ID  Decline\n",
+            "0   adrspt2    False\n",
+            "1  adrspt18    False\n",
+            "2   adrspt9     True\n",
+            "3  adrspt21    False\n",
+            "4  adrspt29    False\n"
+          ]
+        }
+      ]
     }
   ]
 }
