# Step 3: Acoustic Feature Extraction (eGeMAPS)

--- a/Speech_AD.ipynb
+++ b/Speech_AD.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPqboCY+UeuZo7GfCwlOCnv",
+      "authorship_tag": "ABX9TyOaNOY0q+I/UrMsk1g3Q/nr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -770,6 +770,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 3: Acoustic Feature Extraction (eGeMAPS)"
+      ],
+      "metadata": {
+        "id": "Q4NRJ_ayspat"
+      }
     }
   ]
 }
